--- a/src/app/admin/dashboard/create-restaurant/create-restaurant.component.scss
+++ b/src/app/admin/dashboard/create-restaurant/create-restaurant.component.scss
@@ -7,28 +7,30 @@
 
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
-  }
-.error
-{
+}
+
+.error {
   color: red;
   font-size: 12px;
   margin-left: 5px;
 }
-  @media (min-width: 768px) {
+
+@media (min-width: 768px) {
   .gradient-form {
-  height: 100vh !important;
+    height: 100vh !important;
   }
-  }
-  @media (min-width: 769px) {
+}
+
+@media (min-width: 769px) {
   .gradient-custom-2 {
-  border-top-right-radius: .3rem;
-  border-bottom-right-radius: .3rem;
-  }
-  .error
-  {
-      color: red;
-      font-size: 12px;
-      margin-left: 5px;
+    border-top-right-radius: .3rem;
+    border-bottom-right-radius: .3rem;
   }
 
+  .error {
+    color: red;
+    font-size: 12px;
+    margin-left: 5px;
   }
+
+}
