--- a/src/app/customer/customerhome/createyourorder/createyourorder.component.html
+++ b/src/app/customer/customerhome/createyourorder/createyourorder.component.html
@@ -1,5 +1,3 @@
-<!-- <section class="h-700 gradient-form" style="background-color: #eee;"> -->
-<!-- <div class="container h-100"> -->
 <div class="row d-flex justify-content-center align-items-center h-100">
   <div class="col-xl-12">
     <div class="card rounded-3 text-black">
@@ -7,155 +5,79 @@
         <div class="col-lg-6">
           <button (click)="back()" class="btn btn-primary btn-block fa-lg gradient-custom-2 m-2"> Back</button>
           <div class="card-body ">
-
             <div class="text-center">
               <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/lotus.webp"
                 style="width: 185px;" alt="logo">
               <h4 class="mt-1 mb-1 pb-1">Create order</h4>
             </div>
-            <mat-form-field *ngFor="let filter of filterSelectObj" style="margin-left: 15px;">
+            <!-- <mat-form-field *ngFor="let filter of filterSelectObj" style="margin-left: 15px;">
               <mat-label> Filter {{filter.name}} </mat-label>
               <select matNativeControl name="{{filter.columnProp}}" [(ngModel)]="filter.modelValue"
-                (change)="filterChange(filter,$event)">
+                (change)="filterChange(filter,filter.modelValue)">
+                //$event
                 <option value="">All</option>
                 <option *ngFor="let e of restoruntName" [value]="e.name">{{e.name}}</option>
-                <!-- <option [value]="item" *ngFor="let item of filter.options">{{item}}</option> -->
               </select>
+            </mat-form-field> -->
+            <!-- restorunt name filter -->
+            <mat-form-field *ngFor="let filter of filterSelectObj" style="padding-right:5px">
+              <mat-label> {{filter.name}} </mat-label>
+              <mat-select matNativeControl name="{{filter.columnProp}}" [(ngModel)]="filter.modelValue"
+                (ngModelChange)="filterChange(filter,$event)">
+                <mat-option value=''>All</mat-option>
+                <mat-option *ngFor="let e of restoruntName" [value]="e.name">{{e.name}}</mat-option>
+              </mat-select>
             </mat-form-field>
 
-            <mat-form-field *ngFor="let filter of filterSelectObj" style="margin-left: 15px;">
-              <mat-label> Filter {{filter.name}} </mat-label>
-              <select matNativeControl name="{{filter.columnProp}}" [(ngModel)]="filter.modelValue"
-                (change)="filterChange(filter,$event)">
-                <option value="">All</option>
-                <option *ngFor="let e of restoruntName" [value]="e.name">{{e.name}}</option>
-                <!-- <option [value]="item" *ngFor="let item of filter.options">{{item}}</option> -->
-              </select>
+            <!-- sorting  -->
+            <mat-form-field>
+              <mat-label>Price range</mat-label>
+              <mat-select [(ngModel)]="modeselect" #priceRange [placeholder]="modeselect"
+                (ngModelChange)="sortingOrderChange(priceRange.value)">
+                <mat-option value=''>None</mat-option>
+                <mat-option value="asc">low to high</mat-option>
+                <mat-option value="desc">high to low</mat-option>
+              </mat-select>
             </mat-form-field>
-
-
-
-
-
-            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" style="
-    width: 100%;
-" matSort #sort="matSort">
-
-
+            <table mat-table [dataSource]="dataSource"  class="mat-elevation-z8" style="width: 100%;" matSort
+              #sort="matSort">
               <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef> Resturant Name </th>
                 <td mat-cell *matCellDef="let element"> {{element.name}} </td>
               </ng-container>
-
-              <!-- Name Column -->
               <ng-container matColumnDef="Foodtype">
                 <th mat-header-cell *matHeaderCellDef> Food Types </th>
                 <td mat-cell *matCellDef="let element"> {{element.Foodtype}} </td>
               </ng-container>
-              <!-- Name Column -->
               <ng-container matColumnDef="Food">
                 <th mat-header-cell *matHeaderCellDef> Food Name </th>
                 <td mat-cell *matCellDef="let element"> {{element.Food}} </td>
               </ng-container>
-              <!-- Name Column -->
               <ng-container matColumnDef="price">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header=>Price </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header="price">Price </th>
                 <td mat-cell *matCellDef="let element"> {{element.price}} </td>
               </ng-container>
-
               <ng-container matColumnDef="makeorder">
                 <th mat-header-cell *matHeaderCellDef class="p-4">Make Order </th>
                 <td mat-cell *matCellDef="let element" class="p-3 align-items-center">
                   <button type="submit" class="btn btn-primary btn-block fa-lg gradient-custom-2"
                     (click)="placeOrder(element)">Place Order </button>
-
                 </td>
               </ng-container>
-
-
-
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
 
-
-
-
-
-
-
-
-            <!-- <form #craterestorunt="ngForm" (ngSubmit)="onSubmit(craterestorunt)">
-
-
-
-                <div class="form-outline mb-4">
-                  <label class="form-label" for="form2Example22"></label>
-                  <input type="text" id="name" class="form-control" placeholder="Enter Name" name="name" ngModel
-                    #name="ngModel" required />
-                  <div *ngIf="name.invalid && name.touched
-                        || name.invalid && craterestorunt.submitted" class="error">name can not Empty</div>
-
-
-                </div>
-                <div class="form-outline mb-4">
-                  <label class="form-label" for="form2Example11">Select Food type </label>
-                  <select id="Foodtype" name="Foodtype" ngModel #Foodtype class="form-control" required
-                    (change)="onChange(Foodtype)">
-                    <option value="punjabi">Punjabi</option>
-                    <option value="chinese">Chinese</option>
-                    <option value="southIndian">South Indian</option>
-                  </select>
-
-                </div>
-
-                <div class="form-outline mb-4">
-                  <label class="form-label" for="form2Example11">Select Food </label>
-                  <select id="Food" name="Food" ngModel #Food class="form-control" required>
-                    <option *ngFor="let item of foodName" value="{{item}}">{{item}}</option>
-                  </select>
-                </div>
-
-
-                <div class="form-outline mb-4">
-                  <label class="form-label" for="form2Example22">Food Price</label>
-                  <input type="number" id="form2Example22" class="form-control" placeholder="Enter price" name="price"
-                    ngModel #price="ngModel" required />
-                  <div *ngIf="price.invalid && price.touched
-                        || price.invalid && craterestorunt.submitted" class="error">price can not Empty</div>
-
-
-                </div>
-
-                <div class="text-center pt-1 mb-5 pb-1">
-
-                  <button type="submit" [disabled]="craterestorunt.invalid"
-                    class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3">Create</button>
-
-                </div>
-
-                <div class="d-flex align-items-center justify-content-center pb-4">
-
-                </div>
-
-              </form> -->
-
           </div>
         </div>
         <div class="col-lg-6 d-flex align-items-center gradient-custom-2" style="height:fit-content">
-
-
           <img src="../../../../assets/images/Indian-Vancouver-SULA.webp" style="width: 100%; height: 765px;"
             alt="logo">
-          <!-- <h4 class="mt-1 mb-5 pb-1">We are The Lotus Team</h4>
-
-
-                    <p class="small mb-0">This restaurant is a pure vegetarian restaurant. It is well-known for the Punjabi, Chinese,south Indian,  When you look at the menu of the restaurant, it stimulates your taste buds.</p> -->
-
         </div>
       </div>
     </div>
   </div>
 </div>
-<!-- </div> -->
-<!-- </section> -->
+
+
+
