--- a/src/app/customer/customerhome/customerhome.component.scss
+++ b/src/app/customer/customerhome/customerhome.component.scss
@@ -34,7 +34,7 @@
 
 .box-1,
 .box-2 {
-    width: 50%;
+    width: 60%;
 }
 
 .h-1 {
@@ -121,5 +121,15 @@
     .box-2 {
         width: 100%;
         height: 440px;
+    }
+    .gradient-custom-2 {
+      /* fallback for old browsers */
+      background: #fccb90;
+
+      /* Chrome 10-25, Safari 5.1-6 */
+      background: -webkit-linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
+
+      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+      background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
     }
 }
